classDiagram
    direction LR
    class Intersection {
        Name: String
        Latitude: Double
        Longitude: Double
        Elevation: Double
    }
    class Segment {
        Speed: Double
        Lanes: Double
        GetLength() Double
    }
    class Location {
        Distance: Double
    }
    class LocationTime {
        Time: Double
    }
    class Station {
        Speed: Double
    }
    class Vehicle {
        BatteryCapacity: Double
        BatteryLevel: Double
        DemandCapacity: Double
        DemandLevel: Double
        Speed: Double
    }
    class Demand {
        Size: Double
    }
    Segment --> "1" Intersection:Start
    Segment --> "1" Intersection:End
    Location --> "1" Segment
    LocationTime --> "1" Location
    Station --> "1" Location
    Vehicle --> "1" Location
    Demand --> "1" LocationTime:Pickup
    Demand --> "1" LocationTime:Dropoff